2005-09-27 18:46  Dan McMahill <danmc>

        * graphman/configfile.c, src/configfile.c: remove various compiler
          warnings

2005-09-05 Ales Hvezda   <ahvezda@geda.seul.org>

        * po/it.po: Updated the Italian translation by Petrecca Michele.

2005-08-20 Ales Hvezda   <ahvezda@geda.seul.org>

        * po/it.po: Updated the Italian translation by Petrecca Michele.

2005-08-20 Werner Hoch <werner.ho@gmx.de>

	* po/de_DE.pe: updated translation

2005-08-19 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped the package version to 20050820 which will be
        a real snapshot.

2005-08-14 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated package version to 20050814.  This is a 
        temporary version and not a real release number.

2005-05-10 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/task.c: Fixed a nasty crash.  In StrReplace(), realloc
	may return a completely new pointer which needs to be assigned
	and used.  This modified pointer also needed to be returned
	from StrReplace().  Note, gManager will not quite work right with
	files (schematics/pcb/etc...) that do not live in the project 
	directory.  This bug was logged against the debian packages.

2005-03-25 Werner Hoch <werner.ho@gmx.de>
	* src/project.c: added file check, geda hang if theres no file
	  selection or selection is a directory (Bug #156)

2005-03-19 Werner Hoch <werner.ho@gmx.de>

	* po/de_DE.po, po/LINGUAS: added german translation

	* src/main.c, src/support.h: fixed encoding problem with UTF-8
	charactors

2005-03-13 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Removed all tests for gtk+ 1.2.x and fixed error 
        message if gtk+ 2.2.x is not found.

	* src/tool.c: Commented out enum which was unused and caused a 
	seg fault for certain users.  Probably because there isn't an
	equivalent entry in the ExtList data structure.

2005-03-10 22:32  Dan McMahill <danmc>
